fixed overflow and header scroll

--- a/style.css
+++ b/style.css
@@ -6,15 +6,16 @@
     box-sizing: border-box;
 }
 
-html { 
-    scroll-behavior: smooth;
+html, body {
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 body {
     font-family: "Roboto", sans-serif;
     background-color: #222;
     color: white;
-    overflow-x: hidden;
+    margin-top: 63px;
 }
 
 button {
@@ -29,7 +30,8 @@ button {
 .header {
     border-bottom: 1px solid #333;
     background-color: #222;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 5;
 }
